Fix note alignment in the environment table

--- a/tljh-plasmabio/tljh_plasmabio/static/css/style.css
+++ b/tljh-plasmabio/tljh_plasmabio/static/css/style.css
@@ -1,3 +1,7 @@
 .table > tbody > tr > td {
   vertical-align: middle;
 }
+
+.table > tbody > tr > td > p {
+  margin: unset;
+}
